[package]
name = "spin-llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
spin-app = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
spin-core = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
spin-world = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
